Implement CI/CD pipeline with GitHub Actions
- Add GitHub Actions workflow (.github/workflows/ci.yml)
  * Build and test jobs with code coverage
  * Security scanning for vulnerable packages
  * Code quality analysis with formatting checks
  * Multi-environment deployments (Dev, Staging, Prod)
  * Smoke tests for deployment verification

- Add health check endpoint to WebAPI
  * /health endpoint with database connectivity check
  * Used by pipeline smoke tests

- Add environment-specific configuration
  * appsettings.Staging.json
  * Updated appsettings.Production.json with CORS settings

- Add comprehensive documentation
  * AZURE-SETUP.md - Complete Azure infrastructure guide
  * CICD-COMPLETION.md - Implementation summary and next steps

Tasks completed: T053-T056, T062 (6/10 CI/CD tasks)
Pending: Azure infrastructure provisioning (T057-T061)

--- a/src/NBT.WebAPI/appsettings.Production.json
+++ b/src/NBT.WebAPI/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YOUR_PRODUCTION_SERVER;Database=NBTWebsite;User Id=YOUR_USERNAME;Password=YOUR_PASSWORD;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=True;Min Pool Size=5;Max Pool Size=100;Connection Timeout=30"
+    "DefaultConnection": "Server=nbt-sql-prod.database.windows.net;Database=NBTWebsite_Prod;User Id=nbtadmin;Password=<from-keyvault>;Encrypt=True;TrustServerCertificate=False;MultipleActiveResultSets=true;Connection Timeout=30"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,11 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Error"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cors": {
+    "AllowedOrigins": [
+      "https://nbt-website-ui-prod.azurewebsites.net",
+      "https://www.nbt-website.co.za"
+    ]
+  }
 }
